--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "build:prod": "vite build --mode production",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,8 +14,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.2",
     "vite": "^7.2.4",
-    "vite-plugin-vue-devtools": "^8.0.5",
-    "semantic-release": "^23.0.0"
+    "vite-plugin-vue-devtools": "^8.0.5"
   },
   "engines": {
     "node": "24.11.1"
